--- a/packages/piece-zaizai/src/styles/globa.scss
+++ b/packages/piece-zaizai/src/styles/globa.scss
@@ -120,3 +120,11 @@ li,
 p {
   overflow-wrap: break-word;
 }
+
+.transition-all {
+  transition: all 0.5s ease-out;
+}
+
+.demo-content-view {
+  padding: 15px 10px 10px 30px;
+}
