--- a/packages/vitepress-md-renderer-web/src/styles/base.css
+++ b/packages/vitepress-md-renderer-web/src/styles/base.css
@@ -49,7 +49,7 @@ main {
   display: block;
 }
 
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -59,7 +59,7 @@ h6 {
   line-height: 24px;
   font-size: 16px;
   font-weight: 400;
-}
+} */
 
 p {
   margin: 0;
