--- a/packages/vitepress-md-renderer-web/src/styles/components/vp-doc.css
+++ b/packages/vitepress-md-renderer-web/src/styles/components/vp-doc.css
@@ -278,7 +278,8 @@
 .vp-block {
   position: relative;
   margin: 16px -24px;
-  background-color: var(--vp-code-block-bg);
+  /*background-color: var(--vp-code-block-bg);*/
+  background-color: var(--vp-c-bg-alt);
   overflow-x: auto;
   transition: background-color 0.5s;
 }
@@ -445,12 +446,14 @@
   /*rtl:ignore*/
   right: 12px;
   z-index: 3;
-  border: 1px solid var(--vp-code-copy-code-border-color);
+  /*border: 1px solid var(--vp-code-copy-code-border-color);*/
+  border: 1px solid var(--vp-c-divider);
   border-radius: 4px;
   width: 40px;
   height: 40px;
-  background-color: var(--vp-code-copy-code-bg);
-  opacity: 0;
+  /*background-color: var(--vp-code-copy-code-bg);*/
+  background-color: var(--vp-c-bg-soft);
+  opacity: 1;
   cursor: pointer;
   background-image: var(--vp-icon-copy);
   background-position: 50%;
@@ -469,16 +472,19 @@
 
 .vp-doc [class*='language-'] > button.copy:hover,
 .vp-doc [class*='language-'] > button.copy.copied {
-  border-color: var(--vp-code-copy-code-hover-border-color);
-  background-color: var(--vp-code-copy-code-hover-bg);
+  /*border-color: var(--vp-code-copy-code-hover-border-color);*/
+  border-color: var(--vp-c-divider);
+  /*background-color: var(--vp-code-copy-code-hover-bg);*/
+  background-color: var(--vp-c-bg);
 }
 
 .vp-doc [class*='language-'] > button.copy.copied,
 .vp-doc [class*='language-'] > button.copy:hover.copied {
   /*rtl:ignore*/
   border-radius: 0 4px 4px 0;
-  background-color: var(--vp-code-copy-code-hover-bg);
+  /* background-color: var(--vp-code-copy-code-hover-bg); */
   background-image: var(--vp-icon-copied);
+  background-color: var(--vp-c-bg);
 }
 
 .vp-doc [class*='language-'] > button.copy.copied::before,
@@ -490,7 +496,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid var(--vp-code-copy-code-hover-border-color);
+  /* border: 1px solid var(--vp-code-copy-code-hover-border-color); */
+  border: 1px solid var(--vp-c-divider);
   /*rtl:ignore*/
   border-right: 0;
   border-radius: 4px 0 0 4px;
@@ -500,8 +507,9 @@
   text-align: center;
   font-size: 12px;
   font-weight: 500;
-  color: var(--vp-code-copy-code-active-text);
-  background-color: var(--vp-code-copy-code-hover-bg);
+  color: var(--vp-c-text-2);
+  /* background-color: var(--vp-code-copy-code-hover-bg); */
+  background-color: var(--vp-c-bg);
   white-space: nowrap;
   content: var(--vp-code-copy-copied-text-content);
 }
